test/spec_vectors/elem/ok/module_44.wat
(module (table 0 funcref) (func $f) (elem (i32.const 0) $f))