test/spec_vectors/elem/fail/module_58.wat
(module (func $f) (elem (i32.const 0) $f))